<resources>
    <string name="app_name">DAWFL Companion App</string>

    <!--Strings for hub names in activity main-->
    <string name="Prem_Hub">Premier Division Hub</string>
    <string name="D1_Hub">Division 1 Hub</string>
    <string name="D2_Hub">Division 2 Hub</string>
    <string name="R1_Hub">Reserve 1 Hub</string>
    <string name="R2_Hub">Reserve 2 Hub</string>

    <string name="valNum">x</string>

    <string name="logo_description">League Logo</string>
    <string name="fixtures_description">This is a link to the fixtures section</string>
    <string name="tables_description">This is a link to the tables section</string>
    <string name="results_description">This is a link to the results section</string>

    <string name="forum_comment_hint">Enter a comment</string>
    <string name="choose_forum">Choose a forum, you must be logged in to comment</string>
    <string name="new_forum">New Forum</string>

    <!-- Strings for logins and register feature-->
    <string name="register">Register/Login</string>
    <string name="sign_in">Already have an account? Log in here</string>
    <string name="register_here">"Don't have an account? Sign up here"</string>
    <string name="password_hint">Enter your password</string>
    <string name="email_hint">Enter your email</string>
    <string name="register_user">Sign Up</string>
    <string name="log_in_user">Log In</string>

    <string name="profile_camera_textView">Click here to choose your profile picture</string>
    <string name="profile_enter_name">Enter display name</string>
    <string name="save">Save</string>
    <string name="verified">Verified</string>
    <string name="profile_pic_description">This is the user profile picture</string>
    <string name="profile">Profile</string>


    <string name="pitch_locations">Pitch Locations</string>

    <!--Results sending strings-->
    <string name="send_result">Send Result</string>
    <string name="result_instructions">Please send the result of your match to the league contact</string>

    <!--Column heading strings -->
    <string name="clubCol">TEAM</string>
    <string name="pointsCol">PTS</string>
    <string name="playedCol">PLD</string>
    <string name="WonCol">W</string>
    <string name="DrawnCol">D</string>
    <string name="LostCol">L</string>
    <string name="scoredCol">+</string>
    <string name="conCol">-</string>
    <string name="diffCol">+/-</string>

    <!--Row placeholder strings -->
    <string name="club">club</string>

    <!--Hardcoded due to end of season and less processing from json-->
    <string name="comments_res1">02 Oct 2018 - Clonduff II deducted 3 points - Misconduct (Rule 13.13.1)</string>
    <string name="comments_d2">22 Mar 2019 - Clarawood deducted 3 points - Misconduct (Rule 13.13.1)
19 Jan 2019 - Colin Valley III deducted 3 points - Misconduct (Rule 13.13.1)
11 Jan 2019 - Clarawood deducted 3 points - Misconduct (Rule 13.13.1)</string>
    <string name="comments_d1">07 Dec 2018 - Comber Star deducted 3 points - Misconduct (Rule 13.13.1)31 Jan 2019 - Portavogie Rangers II deducted 3 points - Misconduct (Rule 13.13.1)15 Mar 2019 - Castlereagh FC 82 deducted 3 points - Misconduct (Rule 13.13.1) </string>
    <string name="comments_prem"> 31 Jan 2019 - 3rd Bangor deducted 3 points - Misconduct (Rule 13.13.1)08 Mar 2019 - Clonduff deducted 3 points - Misconduct (Rule 13.13.1) </string>
    <string name="title_activity_maps">Map</string>

    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="april_20th">20/04</string>
    <string name="april_24th">24/04</string>
    <string name="april_27th">27/04</string>
    <string name="may_1st">01/05</string>
    <string name="home_team">Home</string>
    <string name="away_team">Away</string>
    <string name="venue">Venue</string>
    <string name="time_comments">All Saturday matches have 14:30 kick off time, mid-week matches are 18:30</string>

</resources>
