<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_header"
        android:layout_alignParentEnd="true"
        android:padding="5dp">

        <!--logged in message-->
        <TextView
            android:id="@+id/logged_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/user_pic_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:contentDescription="@string/profile_pic_description"/>
    </LinearLayout>

    <!--Register button-->
    <Button
        android:id="@+id/register_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/maps_id"
        android:text="@string/register" />

    <!--Maps button-->
    <Button
        android:id="@+id/maps_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/send_result"
        android:text="@string/pitch_locations" />

    <!--This button is the send result button
     It is only visible by users logged in as team admin-->
    <Button
        android:id="@+id/send_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/results_button"
        android:text="@string/send_result" />

    <Button
        android:id="@+id/tables_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/tables_description"
        android:text="@string/tables_button" />

    <Button
        android:id="@+id/fixtures_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/fixtures_description"
        android:text="@string/fixtures_button" />

    <Button
        android:id="@+id/results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/fixtures_button"
        android:contentDescription="@string/results_description"
        android:text="@string/results_button" />


</RelativeLayout>