<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".D1Fixtures">

    <TextView
        android:paddingLeft="5dp"
        android:text="Division 2 Fixtures"
        android:textStyle="bold" />

    <TableRow
        android:fitsSystemWindows="true"
        android:gravity="center">

        <!--Date column  -->
        <TextView
            android:id="@+id/fix_date"
            android:padding="5dp"
            android:text="@string/date"
            android:textSize="12sp"
            android:textStyle="bold" />

        <!-- home team column -->
        <TextView
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home_team"
            android:textSize="12sp"
            android:textStyle="bold" />

        <!-- away team column -->
        <TextView
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/away_team"
            android:textSize="12sp"
            android:textStyle="bold" />

        <!-- venue column -->
        <TextView
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/venue"
            android:textSize="12sp"
            android:textStyle="bold" />


    </TableRow>

    <TableRow android:gravity="center">

        <!-- Fixture 1 date -->
        <TextView
            android:id="@+id/match_date_1"
            android:padding="5dp"
            android:text="@string/april_20th"
            android:textSize="10sp" />


        <!-- home Team 1  -->
        <TextView
            android:id="@+id/team_1_home"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

        <!-- away Team 1  -->
        <TextView
            android:id="@+id/team_1_away"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

        <!-- homeTeam 1 venue -->
        <TextView
            android:id="@+id/team_1_venue"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

    </TableRow>

    <TableRow android:gravity="center">

        <!-- Fixture 1 date -->
        <TextView
            android:id="@+id/match_date_2"
            android:padding="5dp"
            android:text="@string/april_20th"
            android:textSize="10sp" />


        <!-- home team 2 -->
        <TextView
            android:id="@+id/team_2_home"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

        <!-- away team 2 -->
        <TextView
            android:id="@+id/team_2_away"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

        <!-- team 2 venue -->
        <TextView
            android:id="@+id/team_2_venue"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

    </TableRow>

    <TableRow android:gravity="center">

        <!-- Fixture 3 date -->
        <TextView
            android:id="@+id/match_date_3"
            android:padding="5dp"
            android:text="@string/april_27th"
            android:textSize="10sp" />


        <!-- home team 3 -->
        <TextView
            android:id="@+id/team_3_home"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

        <!-- away team 3 -->
        <TextView
            android:id="@+id/team_3_away"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

        <!-- team 3 venue -->
        <TextView
            android:id="@+id/team_3_venue"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/valNum"
            android:textSize="10sp" />

    </TableRow>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/time_comments"
        android:textStyle="bold" />

</TableLayout>
