<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_camera_textView"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_ImageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/android_camera1"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:id="@+id/profile_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_enter_name" />

    <TextView
        android:id="@+id/textViewVerified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verified"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:text="@string/save"
        android:textAllCaps="true" />


</LinearLayout>